--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ html{
   background-color: #E0FFFF;
 }
 .Main{
-  max-width: 1300px;
+  /*max-width: 1300px;*/
+  max-width: 100%;
   margin-left: 10px;
   margin-top: 10px;
   display: flex;
@@ -52,7 +53,8 @@ html{
 }
 .Photo_name{
  /* max-width: 30%; 30%*/
- width: 400px;
+ width: 300px;
+ /*width: 40%;*/
  /*text-align: center;*/
  /*float: left;*/
 }
